# motor_control

./: CMakeLists.txt  README.md  dev.md
course/: 00_learning_map.md  01_motor_model_pid.md  02_cascaded_servo.md  03_pmsm_foc.md  04_drive_sensing.md  05_control_tools.md  06_robot_joint_control.md  07_robot_dynamics_interface.md  08_realtime_safety.md  09_tuning_testing.md
examples/: sim_cascaded_servo.cpp  sim_dc_position_pid.cpp  sim_disturbance_observer.cpp  sim_encoder_velocity_filter.cpp  sim_frequency_response.cpp  sim_joint_impedance.cpp  sim_pmsm_foc.cpp  sim_realtime_jitter_safety.cpp  sim_single_joint_gravity_friction.cpp  sim_tuning_suite.cpp  sim_two_link_computed_torque.cpp
exercises/: 01_motor_model_pid_exercises.md  02_cascaded_servo_exercises.md  03_pmsm_foc_exercises.md  04_drive_sensing_exercises.md  05_control_tools_exercises.md  06_robot_joint_control_exercises.md  07_robot_dynamics_interface_exercises.md  08_realtime_safety_exercises.md  09_tuning_testing_exercises.md  README.md
include/motor_control/control/: CascadedServoController.hpp  DisturbanceObserver.hpp  Filters.hpp  FocTransforms.hpp  ImpedanceController.hpp  PidController.hpp  Trajectory.hpp
include/motor_control/motor/: DcMotor.hpp  PmsmDqModel.hpp
include/motor_control/robot/: SingleJoint.hpp  TwoLinkArm.hpp
include/motor_control/system/: SafetyStateMachine.hpp
include/motor_control/utils/: CsvLogger.hpp
tests/: test_core.cpp
tools/: plot_csv.py
